# python-sendgrid-teammates-training

./: README.md  pyproject.toml
src/: main.py
